--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@
       padding: 10px 12px;
       list-style: none;
       text-align: center;
+      font-size: 1.2rem;
       
   }
   .navigation ul li{
@@ -78,8 +79,10 @@
       
       }
       .navigation ul li a:hover{
-          background-color:bisque;
-          transition: background-color 1s ease-out;
+          background-color :rgb(238, 189, 130) ;
+          transition: background-color 3s ease-out;
+          filter: opacity (0.9);
+          
           }
       /* DISEÑO DE TODOS LOS PARRAFOS */
     .parrafo{
@@ -233,7 +236,46 @@
                
                /* FOTO INDEX PRINCIPAL */
                .fotop{
-                  box-shadow: 0px 0px 20px 0px;
-                  color:chocolate;
+               width: 95%;
+               margin: auto;
+               overflow: hidden;
+               
   
                }
+               .fotop ul{
+                display: flex;
+                padding: 0%;
+                width: 400%;
+                animation: cambio 20s infinite;
+                animation-direction: alternate;
+
+               }
+               .fotop li{
+                width: 100%;
+                list-style: none;
+              }
+               .fotop img{
+                width: auto;
+                height: auto;
+                max-height: 90%;
+                max-width: 70%;
+                
+
+
+               }
+
+               @keyframes cambio{
+                0% {margin-left: 0;}
+                20% { margin-left: 0;}
+
+                25% {margin-left: -100%;}
+                45% {margin-left: -100%;}
+
+                55% {margin-left: -200%;}
+                70% {margin-left: -200%;}
+
+                75% {margin-left: -300%;}
+                100% {margin-left: -300%;}
+               }
+
+               
