Modifique imagen de animacion

--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,7 @@
                
                
                
-               /* FOTO INDEX PRINCIPAL */
+               /* FOTO INDEX PRINCIPAL Y AGREGUE ANIMACIONES*/
                .fotop{
                width: 95%;
                margin: auto;
